test/classes/initializers/errors/iteratorSerializeMethodCalled.good
iteratorSerializeMethodCalled.chpl:4: error: iterators can't be the serialize method, please rename this iterator
